--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>taotao-content</module>
         <module>taotao-search</module>
         <module>taotao-search-web</module>
+        <module>taotao-item-web</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -29,7 +30,7 @@
         <slf4j.version>1.6.4</slf4j.version>
         <jackson.version>2.4.2</jackson.version>
         <druid.version>1.0.9</druid.version>
-        <httpclient.version>4.3.5</httpclient.version>
+        <httpclient.version>4.5.6</httpclient.version>
         <jstl.version>1.2</jstl.version>
         <servlet-api.version>2.5</servlet-api.version>
         <jsp-api.version>2.0</jsp-api.version>
@@ -42,11 +43,11 @@
         <jsqlparser.version>0.9.1</jsqlparser.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <jedis.version>2.9.0</jedis.version>
-        <solrj.version>4.10.3</solrj.version>
+        <solrj.version>7.0.0</solrj.version>
         <dubbo.version>2.5.3</dubbo.version>
         <zookeeper.version>3.4.7</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
-        <activemq.version>5.13.0</activemq.version>
+        <activemq.version>5.15.0</activemq.version>
         <freemarker.version>2.3.23</freemarker.version>
         <quartz.version>2.2.2</quartz.version>
     </properties>
