--- a/taotao-search/taotao-search-service/pom.xml
+++ b/taotao-search/taotao-search-service/pom.xml
@@ -107,6 +107,22 @@
             <artifactId>druid</artifactId>
         </dependency>
 
+        <!--activemq-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
     <!-- 拷贝资源 -->
